fix(core): gaps between input chips are collapsing (#13147)

--- a/projects/core/components/textfield/textfield-multi/textfield-multi.style.less
+++ b/projects/core/components/textfield/textfield-multi/textfield-multi.style.less
@@ -217,6 +217,7 @@ tui-textfield[multi][multi]:where(*&) {
     }
 
     tui-textfield-item {
+        display: inline-table;
         transform: translateX(var(--t-scroll));
     }
 
